# raft

./: .travis.yml  Client.hs  LICENSE  README.md  Talk.hs  raft.cabal
examples/: Client.hs  ClientTypes.hs  DummyProtocol.hs  ProxyServer.hs  ProxyStore.hs  SqliteServer.hs  SqliteStore.hs  SqliteTest.hs  TestProtocol.hs  TestServer.hs  TestStore.hs
src/Consensus/: Dummy.hs  Harness.hs  Raft.hs  Types.hs
src/Network/: Protocol.hs  Stream.hs
src/Network/Protocol/: Server.hs
src/Network/Stream/: Socket.hs  Types.hs
src/Raft/: Protocol.hs  Types.hs
src/Raft/Store/: Sqlite.hs  Volatile.hs
test/: test.hs
tests/: TestStore.hs  test.hs
tools/: Client.hs  ClientTypes.hs  Server.hs  SqliteStore.hs  TestServer.hs
