name:                raft
version:             0.1.0.0

synopsis:
  Raft distributed consensus algorithm

-- description:         

homepage:            http://github.com/kfish/raft
license:             Apache-2.0
license-file:        LICENSE
author:              Conrad Parker
maintainer:          Conrad Parker <conrad@metadecks.org>
-- copyright:           
category:            Database
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010

  exposed-modules:
    Consensus.Types
    Consensus.Raft

  other-modules:
    Consensus.Dummy

  build-depends:
      base >=4.7 && <4.8
    , containers >=0.5 && <0.6

test-suite test
  default-language:    Haskell2010
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    tests
  main-is:
    test.hs
  build-depends:
      base >= 4 && < 5
    , containers >=0.5 && <0.6
    , transformers >= 0.4
    , tasty >= 0.7
    , tasty-hunit
    , tasty-quickcheck
    , raft
