name:                raft
version:             0.1.0.0

synopsis:
  Raft distributed consensus algorithm

-- description:         

homepage:            http://github.com/kfish/raft
license:             Apache-2.0
license-file:        LICENSE
author:              Conrad Parker
maintainer:          Conrad Parker <conrad@metadecks.org>
-- copyright:           
category:            Database
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010

  exposed-modules:
    Consensus.Types
    Consensus.Raft
    Network.Protocol
    Network.Protocol.Server
    Network.Stream
    Network.Stream.Socket
    Network.Stream.Types

  other-modules:
    Consensus.Dummy

  build-depends:
      base >=4.7 && <4.8
    , attoparsec
    , cereal
    , bytestring
    , containers >=0.5 && <0.6
    , exceptions           >= 0.6
    , free
    , mtl >= 2.0
    , network
    , text
    , transformers >= 0.4

executable test-server
  hs-source-dirs:      examples,tests
  default-language:    Haskell2010
  main-is:
    TestServer.hs
  build-depends:
      base >= 4 && < 5
    , cereal
    , containers >=0.5 && <0.6
    , bytestring
    , free
    , mtl >= 2.0
    , network
    , transformers >= 0.4
    , raft

executable raft-client
  hs-source-dirs:      examples
  default-language:    Haskell2010
  main-is:
    Client.hs
  build-depends:
      base >= 4 && < 5
    , attoparsec
    , cereal
    , bytestring
    , containers >=0.5 && <0.6
    , filepath
    , haskeline
    , mtl >= 2.0
    , network
    , transformers >= 0.4
    , raft

test-suite test
  default-language:    Haskell2010
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    tests
  main-is:
    test.hs
  build-depends:
      base >= 4 && < 5
    , containers >=0.5 && <0.6
    , free
    , mtl >= 2.0
    , transformers >= 0.4
    , tasty >= 0.7
    , tasty-hunit
    , tasty-quickcheck
    , raft

-- executable sqlite-test
--   hs-source-dirs:      examples
--   default-language:    Haskell2010
--   main-is:
--     SqliteTest.hs
--   build-depends:
--       base >= 4 && < 5
--     , containers >=0.5 && <0.6
--     , transformers >= 0.4
--     , sqlite-simple >= 0.4 && <1.0
--     , text
--     , raft
