name:                raft
version:             0.1.0.0

synopsis:
  Raft distributed consensus algorithm

-- description:         

homepage:            http://github.com/kfish/raft
license:             Apache-2.0
license-file:        LICENSE
author:              Conrad Parker
maintainer:          Conrad Parker <conrad@metadecks.org>
-- copyright:           
category:            Database
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010

  exposed-modules:
    Raft.Protocol
    Raft.Types
    Raft.Store.Sqlite
    Raft.Store.Volatile
    Network.Protocol
    Network.Protocol.Server
    Network.Stream
    Network.Stream.Socket
    Network.Stream.Types

  build-depends:
      base >=4.7
    , attoparsec
    , cereal
    , bytestring
    , containers >=0.5
    , exceptions           >= 0.6
    , free
    , mtl >= 2.0
    , network
    , sqlite-simple >= 0.4
    , text
    , transformers >= 0.4

executable test-server
  hs-source-dirs:      examples
  default-language:    Haskell2010
  main-is:
    TestServer.hs
  build-depends:
      base >= 4 && < 5
    , cereal
    , containers >=0.5
    , bytestring
    , free
    , mtl >= 2.0
    , network
    , transformers >= 0.4
    , raft

executable sqlite-server
  hs-source-dirs:      examples
  default-language:    Haskell2010
  main-is:
    SqliteServer.hs
  build-depends:
      base >= 4 && < 5
    , cereal
    , containers >=0.5
    , bytestring
    , free
    , mtl >= 2.0
    , network
    , sqlite-simple >= 0.4
    , text
    , transformers >= 0.4
    , raft

executable raft-client
  hs-source-dirs:      examples
  default-language:    Haskell2010
  main-is:
    Client.hs
  build-depends:
      base >= 4 && < 5
    , attoparsec
    , cereal
    , bytestring
    , containers >=0.5
    , filepath
    , haskeline
    , mtl >= 2.0
    , network
    , transformers >= 0.4
    , raft

test-suite test
  default-language:    Haskell2010
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    tests
  main-is:
    test.hs
  build-depends:
      base >= 4
    , containers >=0.5
    , free
    , mtl >= 2.0
    , transformers >= 0.4
    , tasty >= 0.7
    , tasty-hunit
    , tasty-quickcheck
    , raft
